--- a/k8s/aws-credentials-secret.yaml
+++ b/k8s/aws-credentials-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: aws-credentials-secret
 type: Opaque
 data:
-  aws_access_key_id: QUtJQVIySEZTSkIzMzNESEYyTUU=
-  aws_secret_access_key: dUF1ZDR2eHgwRGZkYzhmVnFNNmF3cXRLSWkyR2JETVNiejFJdHRXaw==
+  aws_access_key_id: <AWS-ACCESS-KEY-ID>
+  aws_secret_access_key: <AWS-SECRET-ACCESS-KEY>
