--- a/k8s/identity-server-deployment.yaml
+++ b/k8s/identity-server-deployment.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,7 +29,7 @@ spec:
         - ip: "127.0.0.1"
           hostnames:
             - "wso2is"
-      
+
       containers:
       - name: wso2is
         image: wso2is-5.12.0-alpha12
@@ -53,11 +52,11 @@ spec:
         imagePullPolicy: Never
         resources:
           requests:
-            memory: "1Gi"
-            cpu: "1000m"
-          limits:
             memory: "2Gi"
             cpu: "2000m"
+          limits:
+            memory: "4Gi"
+            cpu: "4000m"
         lifecycle:
           preStop:
             exec:
@@ -86,7 +85,15 @@ spec:
           protocol: TCP
         - containerPort: 9443
           protocol: TCP
+        volumeMounts:
+          - name: identity-server-conf
+            mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/deployment.toml
+            subPath: deployment.toml
       serviceAccountName: "wso2svc-account"
       imagePullSecrets:
         - name: wso2is-deployment-creds
+      volumes:
+        - name: identity-server-conf
+          configMap:
+            name: identity-server-conf
 ---
