--- a/k8s/identity-server-conf.yaml
+++ b/k8s/identity-server-conf.yaml
@@ -9,11 +9,11 @@ data:
     [server]
     hostname = "localhost"
     node_ip = "127.0.0.1"
-    # base_path = "https://$ref{server.hostname}:${carbon.management.port}"
+    base_path = "https://$ref{server.hostname}:${carbon.management.port}"
 
     [super_admin]
     username = "admin"
-    password = "$secret{vault:aws:admin-password}"
+    password = "admin"
     create_admin_account = true
 
     [user_store]
@@ -37,11 +37,11 @@ data:
 
     [keystore.primary]
     file_name = "wso2carbon.jks"
-    password = "$secret{vault:aws:keystore-password1}"
+    password = "wso2carbon"
 
     [truststore]
     file_name="client-truststore.jks"
-    password="$secret{vault:aws:truststore-password#df2b38db-a32c-47ad-9e21-416a7e7f1537}"
+    password="wso2carbon"
     type="JKS"
 
     [account_recovery.endpoint.auth]
@@ -49,7 +49,4 @@ data:
 
     [identity.auth_framework.endpoint]
     app_password= "dashboard"
-
-    [runtime_secrets]
-    enable = "true"
 ---
