--- a/k8s/secret-conf.yaml
+++ b/k8s/secret-conf.yaml
@@ -21,6 +21,6 @@ data:
     secretRepositories=vault
     secretRepositories.vault.provider=org.wso2.carbon.securevault.aws.secret.repository.AWSSecretRepositoryProvider
     secretRepositories.vault.properties.awsregion=us-east-2
-    secretRepositories.vault.properties.credentialProviders=env,cli
+    secretRepositories.vault.properties.credentialProviders=k8sServiceAccount
     secretRepositories.vault.properties.encryption=true
 ---
