--- a/k8s/identity-server-deployment.yaml
+++ b/k8s/identity-server-deployment.yaml
@@ -32,7 +32,7 @@ spec:
 
       containers:
       - name: wso2is
-        image: wso2is-5.12.0-alpha12
+        image: lakshanbanneheke/wso2is-5.12.0-alpha12:latest
         livenessProbe:
           exec:
             command:
@@ -49,7 +49,7 @@ spec:
               - nc -z localhost 9443
           initialDelaySeconds: 250
           periodSeconds: 10
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         resources:
           requests:
             memory: "2Gi"
